--- a/projeto-final/index.html
+++ b/projeto-final/index.html
@@ -41,7 +41,7 @@
         <section>
             <article class="article-container">
                 <figure>
-                    <img class="foto-perfil" src="C:\Users\laris\HTML_PRETALAB\projeto-final\img\foto-perfil.jpg" alt="Foto perfil" />
+                    <img class="foto-perfil" src="./img/foto-perfil.jpg" alt="Foto perfil" />
             
                 </figure>
                 
